<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Areta</string>
    <string name="alarms">Alarms</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="label" tools:ignore="PrivateResource">Delete</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="workout">Workout</string>
    <string name="sno">Sno</string>
    <string name="no">No</string>
    <string name="equals">=</string>
    <string name="enter">Enter</string>
    <string name="start">START</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="stretches">Stretches</string>
    <string name="punch_line">Live your life to the fullest</string>
    <string name="areta_logo">Areta logo</string>
    <string name="workout_name">Workout Name</string>
    <string name="done">Done</string>
    <string name="you_have_worked_hard">You have worked hard, take a rest today</string>
    <string name="rest_day">Rest Day</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="congratulations">Congratulations!</string>
    <string name="workout_completed">Workout Completed</string>
    <string name="click_here">Click here!</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="pomodoro_focus_timer">Pomodoro Focus Timer</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="plus">+</string>
</resources>