<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutHome"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/MonButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            tools:ignore="NestedWeights"
            android:text="@string/monday"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/TueButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/tuesday"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/WedButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            tools:ignore="NestedWeights"
            android:text="@string/wednesday"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/ThuButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/thursday"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/FriButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            tools:ignore="NestedWeights"
            android:text="@string/friday"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/SatButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/saturday"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/SunButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            tools:ignore="NestedWeights"
            android:text="@string/sunday"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/StrButt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/stretches"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>



</LinearLayout>