<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/Sno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sno"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="9dp"
        android:text="@string/placeholder_text"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Sno"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:text="@string/label"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>